--- a/_config.yml
+++ b/_config.yml
@@ -104,11 +104,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Saturn294571"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
-  location         : "Somewhere"
-  email            :
+  location         : "Seoul, Republic of Korea"
+  email            :"shehdwn320@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
